comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Apredendo Git e GitHub</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Apredendo usar o Branches do Git e GitHub</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui facilis dolore eos impedit consequuntur! Sapiente consequuntur, officia omnis labore ipsa esse corporis eum inventore, veniam possimus ipsam maxime, blanditiis deleniti.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Apredendo Git e GitHub</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi quam animi neque, assumenda impedit exercitationem quo debitis, voluptatibus aperiam architecto ipsa in et, earum ullam! Quisquam at iusto laboriosam laborum.</p>
         </article>
     </main>
 </body>
