--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi quam animi neque, assumenda impedit exercitationem quo debitis, voluptatibus aperiam architecto ipsa in et, earum ullam! Quisquam at iusto laboriosam laborum.</p>
         </article>
     </main>
+    <footer>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel iure deleniti similique doloremque, quisquam dicta? Soluta, enim. Eius laboriosam vitae et placeat, repellendus, minima qui saepe odio ducimus veniam officiis.</p>
+    </footer>
 </body>
 </html>
