--- a/index.html
+++ b/index.html
@@ -2,27 +2,28 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site </title>
-    <link rel="stylesheet" href="./estilos/style.css">
+    <title>Curso em Vídeo</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
         <header>
-            <h1>Apredendo Git e GitHub</h1>
+            <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
-            <h2>Apredendo usar o Branches do Git e GitHub</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui facilis dolore eos impedit consequuntur! Sapiente consequuntur, officia omnis labore ipsa esse corporis eum inventore, veniam possimus ipsam maxime, blanditiis deleniti.</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
-            <h2>Apredendo Git e GitHub</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi quam animi neque, assumenda impedit exercitationem quo debitis, voluptatibus aperiam architecto ipsa in et, earum ullam! Quisquam at iusto laboriosam laborum.</p>
+            <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
-    <footer>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel iure deleniti similique doloremque, quisquam dicta? Soluta, enim. Eius laboriosam vitae et placeat, repellendus, minima qui saepe odio ducimus veniam officiis.</p>
-    </footer>
 </body>
 </html>
